# hyprmeji

./: ARCHITECTURE.md  Cargo.toml
crates/hyprmeji/: Cargo.toml
crates/hyprmeji-core/: Cargo.toml
crates/hyprmeji-core/src/: animation.rs  error.rs  lib.rs  physics.rs  state.rs  types.rs
crates/hyprmeji-input/: Cargo.toml
crates/hyprmeji-input/src/: error.rs  handler.rs  lib.rs
crates/hyprmeji-ipc/: Cargo.toml
crates/hyprmeji-ipc/src/: client.rs  error.rs  lib.rs  types.rs
crates/hyprmeji-loader/: Cargo.toml
crates/hyprmeji-loader/src/: detect.rs  error.rs  java.rs  lib.rs  native.rs
crates/hyprmeji-render/: Cargo.toml
crates/hyprmeji-render/src/: buffer.rs  error.rs  lib.rs  renderer.rs  surface.rs
crates/hyprmeji/src/: loop.rs  main.rs
